--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -698,7 +698,7 @@ When we are looking at the map cluster results for density-based clustering, we 
 In summary, model-based clustering has a good overall performance in categorizing the countries into more detailed levels since each region in the model-based clustering output is relatively interpretative, and we can see a clear trend of the varying socio-economic and health conditions among those regions. The clustering results from this method are more useful when we aim to categorize and compare the different countries with more detailed information. However, the trade-off is that it largely decreases the interpretability of the results. Since the model can never be perfect, it is more likely to lead to some categorizing problems that make the clusters difficult to interpret. Just like the examples we talked about above, intuitively it does not makes sense to put Nigeria into the blue region when applying model-based clustering on the unscaled data set, so it is hard for us to summarize the common properties of the countries in this cluster. Compared to the model-based clustering on the unscaled data set, the clustering on the scaled data set increases the interpretability with smaller number of clusters. Finally, comparing the hierarchical clustering and model-based clustering together, we find that both methods perform well in different ways, and there are some trade-offs between the number of clusters and the interpretability of those clusters. The results of hierarchical clustering are the easiest to interpret, but we could not apply this method to achieve a more complex categorization for this data set. On the contrary, the results of model-based clustering on the unscaled data set are the most difficult to interpret, but we could get more information about different categories on this data set. The results of model-based clustering on the scaled data set balance that trade-off. Just as what we mentioned at the beginning, there is no criterion for "good" clustering, so we generally just want to choose the method that balances this trade-off and achieves our research goal.
 
 ```{r, include=FALSE}
-# To put just code in our R script (runs every time this document is knit):
+# put just code in our R script
 knitr::purl(input = 'clustering-countries.Rmd', 
             output = 'clustering-countries.R')
 ```
