rename files again

--- a/vignette.Rmd
+++ b/vignette.Rmd
@@ -699,6 +699,6 @@ In summary, model-based clustering has a good overall performance in categorizin
 
 ```{r, include=FALSE}
 # put just code in our R script
-knitr::purl(input = 'vignette-clustering-countries.Rmd', 
-            output = 'scripts/script-clustering-countries.R')
+knitr::purl(input = 'vignette.Rmd', 
+            output = 'scripts/vignette-script.R')
 ```
